Update to alpha.9